--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
